Remove references to old internal doc
